<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">inmidtown</string>
    <string name="logo">Logo</string>
    <string name="site_icon_text">The logo for the site</string>
    <string name="buttonHome">Home</string>
    <string name="buttonMap">Map</string>
    <string name="buttonAboutUs">About Us</string>
    <string name="buttonExpand">Details</string>
    <string name="site_icon">Site Icon</string>
    <string name="arrow_button">Arrow Button</string>
    <string name="aboutUs">About Us</string>
    <string name="aboutUsHeader"></string>
    <string name="aboutUsDetail1">
    InMidTown represents the interests of 560 businesses in Holborn, 
    Bloomsbury and St. Giles.   
    We deliver tangible benefits for our members by providing practical, 
    cost-effective services such as recycling and joint procurement. 
    </string>
    <string name="aboutUsDetail2">
    We also aim to add value to the work of Camden Council and Transport 
    for London in the areas of street management, public realm and transport. 
    As well as seeking to influence and encourage local business leaders and 
    key decision makers at the Council and in the Mayor’s Office, we work 
    closely with organisations such as the Midtown Business Club.
    </string>
    <string name="aboutUsDetail3">
    Our aim is to make Bloomsbury, Holborn and St. Giles a quality environment 
	in which to work and live, a vibrant area to visit and a profitable place to do business.
    </string>
    <string name="theAppTitle">
        The Eco App - InMidTown
    </string> 
    <string name="theApp">
        The Eco App has been designed and developed by the Mobile and Ubiquitous Computing students at the Department of Computer Science, Birkbeck College, University of London. 
    </string> 
    <string name="credits">
        Software Development: Dave Durbin, William Linden, Giorgio Huang, Chatitze Moumin , David McRobert; Concept and UI design: Hesseltje S van Goor and Tracey Field; Analytics: Ray Su; Illustrations: William Jesus Maria Jose Bates; Sound: Philip Wickens; TAs: Richard Brownlow and Long Chen; Lecturer: George Roussos  
    </string>  
    <string name="placeholder">Place holder for content descripion</string>
    <string name="buttonSocial">Social</string>
    <string name="facebookAppIdWL">537394989644448</string>
    <string name="facebookAppSecretWL">a86acad3f1186eab42bd1d6173833f7b</string>
    <string name="facebookAppId">264225457054059</string>
    <string name="facebookAppSecret">f852bd082338b7c6225d522ca965711d</string>
    <string name="closeBtnText">close</string>
    <string name="openFacebookText">view</string>
    <string name="ConnectionError">Sorry, a connection error has occured, please try again later.</string>
    <string name="likeButtonText">Like</string>
    <string name="fb_login_btn_txt">Login</string>
</resources>
