<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">
	
		<ImageButton 
	    	android:layout_width="wrap_content"
        	android:layout_height="50dp"
        	android:background="@drawable/inmidtown_bar" />
		
		<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutUs"
        android:layout_marginLeft="5dp" 
        android:layout_marginTop="7dp" 
        android:textSize="15sp"/>
		
		<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutUsDetail1"
        android:layout_marginLeft="10dp" 
        android:textSize="12sp"/>
		
		<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutUsDetail2"
        android:layout_marginLeft="10dp" 
        android:layout_marginTop="8dp" 
        android:textSize="12sp"/>
		
		<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutUsDetail3"
        android:layout_marginLeft="10dp" 
        android:layout_marginTop="8dp" 
        android:textSize="12sp"/>

		<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/theAppTitle"
        android:layout_marginLeft="5dp" 
        android:layout_marginTop="7dp" 
        android:textSize="15sp"/>
		
		<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/theApp"
        android:layout_marginLeft="10dp" 
        android:textSize="12sp"/>
		
		<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/credits"
        android:layout_marginLeft="10dp" 
        android:textSize="12sp"/>		
</LinearLayout>