<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!--
    Top banner contains logo and search button. 
    It's aligned to the top of the parent, occupies the full width.
    The left part (banner)  is aligned to the left of the parent
    The right part (search button) is aligned to the right of the parent
    They are weighted 6/1 -->

    <LinearLayout
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="fill_horizontal"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/banner_logo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="622"
            android:adjustViewBounds="true"
            android:contentDescription="@string/placeholder"
            android:scaleType="fitCenter"
            android:background="@drawable/inmidtown_bar" />

        <ImageButton
            android:id="@+id/search_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="98"
            android:background="@drawable/search"
            android:contentDescription="@string/placeholder"
            android:onClick="onSearch"
            android:scaleType="fitCenter" />

    </LinearLayout>

    <!--
    Next block is a set of three buttons, distributed equally 
    and below the banner    -->

    <LinearLayout
        android:id="@+id/button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/banner"
        android:orientation="horizontal">

        <Button
            android:id="@+id/home_button"
            style="@style/button_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onSetHome"
            android:scaleType="fitXY"
            android:background="@drawable/android_button"
            android:text="@string/buttonHome" />

        <Button
            android:id="@+id/map_button"
            style="@style/button_style"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onSetMap"
            android:scaleType="fitXY"
            android:background="@drawable/android_button"
            android:text="@string/buttonMap" />

        <Button
            android:id="@+id/aboutusbtn"
            style="@style/button_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onSetAboutUs"
            android:scaleType="fitXY"
            android:background="@drawable/android_button"
            android:text="@string/buttonAboutUs" />

    </LinearLayout>

    <!--
	Text label for the listing showing 'nearby businesses' text
	Directly below the three buttons    -->

    <ImageView
        android:id="@+id/nearby_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/button_bar"
        android:adjustViewBounds="true"
        android:contentDescription="@string/placeholder"
        android:scaleType="fitXY"
        android:src="@drawable/title_bar" />

    <!-- Finally the list view itself -->
    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/nearby_button"
        android:background="#FFFFF9"
        android:cacheColorHint="#00000000"/>
    

</RelativeLayout>